Correct first two color contrast errors with key styles

--- a/app/assets/stylesheets/global/tei.scss
+++ b/app/assets/stylesheets/global/tei.scss
@@ -4,7 +4,7 @@
 // TEI
 // ================
 
-$overwrite_color: darken($brand-success, 10%);
+$overwrite_color: $brandy; // darken($brand-success, 10%);
 
 // Proofs
 
@@ -528,7 +528,8 @@ see https://whitman-dev.unl.edu/manuscripts/transcriptions/yal.00002.html */
 // limiting Chesnutt's hand to manuscripts
 .category_manuscripts {
   .tei_hand_resp_cwc {
-    border-bottom: double 3px $brand-success;
+    border-bottom: double 5px $gold-metallic-dark;
+    border-top: double 5cap $gold-metallic-dark;
   }
 }
 // .tei_hand_medium_black_pen {
